package protection.model.common;

import lombok.Getter;
import lombok.Setter;

public class Timestamp extends DATA {

    @Getter @Setter
    private long value = 0L;
}
